# realcore

./: .gitattributes  .gitignore  LICENSE  README.md
database/: game_record_summry.ipynb  merge.sh  readme.txt
doc/01_data_definition/: board_definition.xlsx  data_definition.pptx  move_definition.xlsx
doc/02_terminate_definition/: normality.pptx  terminate_definition.pptx
doc/03_bit_search/: bit_search.pptx  bit_search.xlsx
doc/04_line_neighborhood/: line_neighborhood.pptx
doc/05_move_pattern/: move_pattern.pptx
doc/06_forbidden_check/: forbidden_check.pptx
doc/07_move_tree/: move_tree.pptx
doc/08_hash_value/: hash_value.pptx  prime.xlsx
performance/board_get_set/: BoardGetSet.cc  CMakeLists.txt  build.sh  performance.xlsx
performance/enumerate_bit_index/: CMakeLists.txt  EnumerateBitIndex.cc  EnumerateBitIndex.h  EnumerateBitIndex.xlsx
performance/enumerate_forbidden_move/: CMakeLists.txt  EnumerateForbiddenMove.cc  EnumerateForbiddenMove.h  EnumerateForbiddenMove.xlsx  callgrind.out.9368  kcachegrind.sh
src/: BitBoard.cc  BitSearch.cc  Board.cc  BoardOpenState.cc  CSVReader.cc  LineNeighborhood.cc  Move.cc  MoveList.cc  OpenState.cc  RealCore.cc  SGFParser.cc  SGFReader.cc  SearchManager.cc
src/include/: BitBoard-inl.h  BitBoard.h  BitSearch-inl.h  BitSearch.h  Board-inl.h  Board.h  BoardOpenState-inl.h  BoardOpenState.h  CSVReader.h  Conversion-inl.h  Conversion.h  HashTable-inl.h  HashTable.h  LineNeighborhood-inl.h  LineNeighborhood.h  Lock.h  Move-inl.h  Move.h  MoveDefinition.h  MoveList-inl.h  MoveList.h  MovePatternSearch-inl.h  MovePatternSearch.h  MoveTree-inl.h  MoveTree.h  MoveTreeNode-inl.h  MoveTreeNode.h  OpenState-inl.h  OpenState.h  ReadBoardPositionLateral.h  RealCore-inl.h  RealCore.h  SGFParser-inl.h  SGFParser.h  SGFReader-inl.h  SGFReader.h  SearchManager-inl.h  SearchManager.h
src/include/def/: BitBoardDefinition.h  DeBruijnMapping.h  HashValueBlack.h  HashValueWhite.h  InBoardMoveList.h  MoveDefinition.h  ReadBoardPositionLeftDiagonal.h  ReadBoardPositionRightDiagonal.h  ReadBoardPositionVertical.h  WriteBoardPositionLateral.h  WriteBoardPositionLeftDiagonal.h  WriteBoardPositionRightDiagonal.h  WriteBoardPositionVertical.h
test/: run_tests.sh
test/bit_board/: BitBoardForbiddenTest.cc  BitBoardMemberTest.cc  BitBoardMoveCheckTest.cc  BitBoardTest.cc  CMakeLists.txt
test/bit_search/: BitSearchTest.cc  CMakeLists.txt
test/board/: BoardForbiddenTest.cc  BoardMemberTest.cc  BoardTest.cc  CMakeLists.txt
test/board_open_state/: BoardOpenStateTest.cc  CMakeLists.txt
test/conversion/: CMakeLists.txt  ConversionTest.cc
test/csv_reader/: CMakeLists.txt  CSVReaderTest.cc  test_data.csv
test/hash_table/: CMakeLists.txt  HashTableTest.cc
test/influence_area/: CMakeLists.txt  InfluenceAreaCheck.cc  InfluenceAreaCheck.h  run.sh
test/line_neighborhood/: CMakeLists.txt  LineNeighborhoodTest.cc
test/lock/: CMakeLists.txt  LockTest.cc
test/move/: CMakeLists.txt  MoveTest.cc
test/move_list/: CMakeLists.txt  MoveListTest.cc  test.pos
test/move_pattern_search/: CMakeLists.txt  MovePatternSearchTest.cc
test/move_tree/: CMakeLists.txt  MoveTreeTest.cc
test/move_tree_node/: CMakeLists.txt  MoveTreeNodeTest.cc
test/open_state/: CMakeLists.txt  OpenStateTest.cc
test/real_core/: CMakeLists.txt  RealCoreTest.cc
test/search_manager/: CMakeLists.txt  SearchManagerTest.cc
test/sgf_parser/: CMakeLists.txt  SGFParserTest.cc  run.sh
test/sgf_reader/: CMakeLists.txt  SGFReaderTest.cc  test_data.sgf
